--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 nose2
+        pip install flake8 nose2 ossaudit
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -37,4 +37,7 @@ jobs:
     - name: Test with Nose2
       run: |
         nose2 -v
+    - name: Check vulnerabilities with OSS Audit
+      run: |
+        ossaudit -f requirements.txt
         
